# AndroidSample

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/suli/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: GetKey.c  aes256.c  aes256.h  base64.c  base64.h  native-lib.cpp
app/src/main/java/com/suli/sample/: App.java  MainActivity.java  MyApplication.java  WebViewActivity.java
app/src/main/res/layout/: activity_main.xml  webview_layout.xml
app/src/test/java/com/suli/sample/: ExampleUnitTest.java
buildsystem/: debug.jks  dependencies.gradle
gradle/wrapper/: gradle-wrapper.properties
key/: PAEM.keystore
lib.security/: CMakeLists.txt  build.gradle
lib.security/src/androidTest/java/com/suli/libsecurity/: ExampleInstrumentedTest.java  SecurityUtilsTest.java
lib.security/src/main/: AndroidManifest.xml
lib.security/src/main/cpp/: CMakeLists.txt  Log.h  encrypt.c  encrypt.h  security.c
lib.security/src/main/cpp/include/mbedtls/: config.h
lib.security/src/main/java/com/suli/lib/security/: Constant.java  SecurityUtils.java
lib.security/src/main/res/values/: strings.xml
lib.security/src/test/java/com/suli/libsecurity/: ExampleUnitTest.java
lib.utils/: CMakeLists.txt  build.gradle
lib.utils/src/androidTest/java/com/suli/libutils/: EncryptUtilsTest.java  ExampleInstrumentedTest.java  StringUtilsTest.java  TimeUtilsTest.java
lib.utils/src/main/: AndroidManifest.xml
lib.utils/src/main/cpp/: main.c
lib.utils/src/main/cpp/aes/: aes.c  aes.h
lib.utils/src/main/java/com/suli/lib/utils/: ActivityUtils.java  AppUtils.java  BarUtils.java  CameraUtils.java  CleanUtils.java  ClipboardUtils.java  CloseUtils.java  ConstUtils.java  ConvertUtils.java  CrashUtils.java  DeviceUtils.java  EmptyUtils.java  EncodeUtils.java  EncryptUtils.java  FileUtils.java  FragmentUtils.java  HandlerUtils.java  ImageUtils.java  IntentUtils.java  KeyboardUtils.java  LocationUtils.java  LogUtils.java  LunarUtils.java  NetworkUtils.java  PhoneUtils.java  PinyinUtils.java  ProcessUtils.java  RandomUtils.java  RegexUtils.java  SDCardUtils.java  SPUtils.java  ScreenUtils.java  ServiceUtils.java  ShellUtils.java  SizeUtils.java  SnackbarUtils.java  SpannableStringUtils.java  StringUtils.java  ThreadPoolUtils.java  TimeUtils.java  (+4 more)
lib.utils/src/main/java/com/suli/lib/utils/tools/: AESUtils.java
lib.utils/src/main/res/values/: strings.xml
lib.utils/src/test/java/com/suli/libutils/: EncryptUtilsTest.java  ExampleUnitTest.java  StringUtilsTest.java  TimeUtilsTest.java
replugin-host-lib/: build.gradle
